--- a/index.html
+++ b/index.html
@@ -3,7 +3,44 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Rubik"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./styles.css/main.css" />
     <title>Creando Diversidad Digital</title>
   </head>
-  <body></body>
+
+  <body>
+    <header class="header">
+      <div class="logo">
+        <a href="https://adalab.es/" target="_blank"
+          ><img
+            class="logo-header"
+            src="./images/adalab-logo-155x61.png"
+            alt="Adalab"
+          />
+        </a>
+      </div>
+      <div>
+        <nav class="nav">
+          <ul class="list">
+            <li>
+              <a class="link" href="#blog">BLOG</a>
+            </li>
+            <li>
+              <a class="link" href="#contacto">CONTACTO</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <main class="main">
+      <h1 class="title">
+        <span class="title-item"> Creando</span>
+        <span class="title-item">Diversidad </span>
+        <span class="title-item">Digital</span>
+      </h1>
+    </main>
+  </body>
 </html>
