solving issues - improving code

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       href="https://fonts.googleapis.com/css?family=Rubik"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./styles.css/main.css" />
+    <link rel="stylesheet" href="./styles/main.css" />
     <title>Creando Diversidad Digital</title>
   </head>
 
@@ -19,6 +19,7 @@
             class="logo-header"
             src="./images/adalab-logo-155x61.png"
             alt="Adalab"
+            title="logo-adalab-header"
           />
         </a>
       </div>
@@ -26,10 +27,12 @@
         <nav class="nav">
           <ul class="list">
             <li>
-              <a class="link" href="#blog">BLOG</a>
+              <a class="link" href="#blog" title="Blog Adalab">blog</a>
             </li>
             <li>
-              <a class="link" href="#contacto">CONTACTO</a>
+              <a class="link" href="#contacto" title="Contacto Adalab"
+                >contacto</a
+              >
             </li>
           </ul>
         </nav>
@@ -37,9 +40,9 @@
     </header>
     <main class="main">
       <h1 class="title">
-        <span class="title-item">Creando</span>
-        <span class="title-item">Diversidad </span>
-        <span class="title-item">Digital</span>
+        <span class="title-item">creando</span>
+        <span class="title-item">diversidad </span>
+        <span class="title-item">digital</span>
       </h1>
     </main>
   </body>
